--- a/server/app/views/planning/classtimetables/manageClass.scala.html
+++ b/server/app/views/planning/classtimetables/manageClass.scala.html
@@ -7,21 +7,267 @@
 
         <div class="manage-class-form-section">
 
-            <a class="btn btn-primary" role="button" href="@controllers.planning.classtimetable.routes.ClassTimetableController.classesHome()">Back To Classes Home</a>
-            <button type="button" class="btn btn-success">Class Timetable</button>
+            <div class="d-flex">
+                <ul class="nav mr-auto justify-content-between">
+                    <li class="nav-item manage-class-nav-item-leftmost">
+                        <a class="btn btn-primary" role="button" href="@routes.Application.timeToTeachApp()">
+                            Dashboard</a>
+                    </li>
 
-            <h6 class="text-center text-muted form-header manage-class-details-header">Class Details</h6>
+                    <li class="nav-item manage-class-nav-item-on-left">
+                        <a class="btn btn-primary" role="button" href="@controllers.planning.classtimetable.routes.ClassTimetableController.classesHome()">
+                            Classes</a>
+                    </li>
 
-            <p>Class Name: @{
-                if(classDetails.isDefined) {
-                    classDetails.get.className.name
-                } else {
-                    "No Class Found"
-                }
-            }</p>
+                    <li class="nav-item manage-class-nav-item-on-left">
+                        <a id="manage-class-goto-timetable" class="btn btn-primary" role="button"
+                        href="@controllers.planning.classtimetable.routes.ClassTimetableController.classTimetable(classDetails.get.id.id)">
+                            Timetable</a>
+                    </li>
 
+                    <li class="nav-item manage-class-nav-item-on-left">
+                        <button id="manage-class-goto-timetable" type="button" class="btn btn-primary" disabled="true">Termly Plans</button>
+                    </li>
+
+                    <li class="nav-item manage-class-nav-item-on-left">
+                        <button id="manage-class-goto-timetable" type="button" class="btn btn-primary" disabled="true">Weekly Plans</button>
+                    </li>
+
+                </ul>
+
+                <ul class="nav justify-content-end">
+                    <li class="nav-item manage-class-nav-item-on-right">
+                        <button id="manage-class-edit" type="button" class="btn btn-info" disabled="true">
+                            Edit Class</button>
+                    </li>
+
+                    <li class="nav-item manage-class-nav-item-rightmost">
+                        <button id="manage-class-delete" type="button" class="btn btn-danger" disabled="true">Delete Class</button>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="manage-class-section">
+                <div class="form-row manage-class-form-row">
+                    <div class="col-md-3">
+                        <label class="add-new-class-label text-muted" for="className">Name</label>
+                        <input type="text" id="className" name="className" class="form-control form-control-sm" disabled="true"
+                        placeholder="@{
+                            if(classDetails.isDefined) {
+                                classDetails.get.className.name
+                            }
+                            else {
+                                "No Class Found"
+                            }
+                        }
+                        ">
+                    </div>
+                    <div class="col-md-9"></div>
+                </div>
+
+                <div class="form-row manage-class-form-row">
+                    <div class="col-md-12">
+                        <label class="add-new-class-label text-muted" for="classDescription">Description</label>
+                        <input type="text" id="classDescription" name="classDescription" class="form-control form-control-sm" disabled="true"
+                        placeholder="@{
+                            if(classDetails.isDefined) {
+                                classDetails.get.classDescription.name
+                            } else {
+                                "No Class Found"
+                            }
+                        }
+                        " >
+                    </div>
+                </div>
+
+                <div class="form-row add-new-class-form-row">
+                    <div class="col-md-5">
+                        <div class="text-center">
+                            <label class="manage-class-desription-label manage-class-group-header">Maths Groups</label>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-3 text-muted"><small>Group</small></div>
+                            <div class="col-md-5 text-muted"><small>Description</small></div>
+                            <div class="col-md-2 text-muted"><small>Level</small></div>
+                            <div class="col-md-2"></div>
+                        </div>
+                        @if(classDetails.isDefined) {
+                            @for(group <- classDetails.get.groups) {
+                                @if(group.groupType.value.toLowerCase == "maths") {
+                                    <div class="form-row manage-class-group-row">
+                                        <div class="col-md-3">
+                                            <input type="text" name="groupName" class="form-control form-control-sm" disabled="true"
+                                            placeholder="@{
+                                                if(classDetails.isDefined) {
+                                                    group.groupName.name
+                                                } else {
+                                                    "No Class Found"
+                                                }
+
+                                            }
+                                            ">
+                                        </div>
+                                        <div class="col-md-5">
+                                            <input type="text" name="groupDescription" class="form-control form-control-sm" disabled="true"
+                                            placeholder="@{
+                                                if(classDetails.isDefined) {
+                                                    group.groupDescription.name
+                                                } else {
+                                                    "No Class Found"
+                                                }
+
+                                            }
+                                            ">
+                                        </div>
+                                        <div class="col-md-2">
+                                            <input type="text" name="groupType" class="form-control form-control-sm" disabled="true"
+                                            placeholder="@{
+                                                if(classDetails.isDefined) {
+                                                    group.groupLevel.value.toLowerCase.capitalize.replace("level", "")
+                                                } else {
+                                                    "No Class Found"
+                                                }
+
+                                            }
+                                            ">
+                                        </div>
+
+                                        <div class="col-md-2">
+                                            <button id="manage-class-edit" type="button" class="btn btn-sm btn-info" disabled="true">
+                                                Group Plans
+                                            </button>
+                                        </div>
+
+                                    </div>
+                                }
+                            }
+                        } else {
+                            <p>there</p>
+                            "No Class Found"
+                        }
+                    </div>
+                    <div class="col-md-2"></div>
+                    <div class="col-md-5">
+                        <div class="text-center">
+                            <label class="manage-class-desription-label manage-class-group-header">Literacy Groups</label>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-3 text-muted"><small>Group</small></div>
+                            <div class="col-md-5 text-muted"><small>Description</small></div>
+                            <div class="col-md-2 text-muted"><small>Level</small></div>
+                            <div class="col-md-2"></div>
+                        </div>
+
+                        @if(classDetails.isDefined) {
+                            @for(group <- classDetails.get.groups) {
+                                @if(group.groupType.value.toLowerCase == "literacy") {
+                                    <div class="form-row manage-class-group-row">
+                                        <div class="col-md-3">
+                                            <input type="text" name="groupName" class="form-control form-control-sm" disabled="true"
+                                            placeholder="@{
+                                                if(classDetails.isDefined) {
+                                                    group.groupName.name
+                                                } else {
+                                                    "No Class Found"
+                                                }
+
+                                            }
+                                            ">
+                                        </div>
+                                        <div class="col-md-5">
+                                            <input type="text" name="groupDescription" class="form-control form-control-sm" disabled="true"
+                                            placeholder="@{
+                                                if(classDetails.isDefined) {
+                                                    group.groupDescription.name
+                                                } else {
+                                                    "No Class Found"
+                                                }
+
+                                            }
+                                            ">
+                                        </div>
+                                        <div class="col-md-2">
+                                            <input type="text" name="groupType" class="form-control form-control-sm" disabled="true"
+                                            placeholder="@{
+                                                if(classDetails.isDefined) {
+                                                    group.groupLevel.value.toLowerCase.capitalize.replace("level", "")
+                                                } else {
+                                                    "No Class Found"
+                                                }
+
+                                            }
+                                            ">
+                                        </div>
+
+                                        <div class="col-md-2">
+                                            <button id="manage-class-edit" type="button" class="btn btn-sm btn-info" disabled="true">
+                                                Group Plans
+                                            </button>
+                                        </div>
+                                    </div>
+                                }
+                            }
+                        } else {
+                            <p>there</p>
+                            "No Class Found"
+                        }
+                    </div>
+                </div>
+
+                <div class="form-row add-new-class-form-row">
+                    <div class="col-md-6">
+
+                    @if(classDetails.isDefined) {
+                        @if(classDetails.get.groups.count(aGroup => aGroup.groupLevel.value.toLowerCase == "other") > 0) {
+                            <label class="manage-class-desription-label manage-class-group-header">Other Groups</label>
+                            @for(group <- classDetails.get.groups) {
+                                @if(group.groupType.value.toLowerCase == "other") {
+                                    <div class="form-row manage-class-group-row">
+                                        <div class="col-md-6">
+                                            <input type="text" name="groupName" class="form-control form-control-sm" disabled="true"
+                                            placeholder="@{
+                                                if(classDetails.isDefined) {
+                                                    group.groupName.name
+                                                } else {
+                                                    "No Class Found"
+                                                }
+
+                                            }
+                                            ">
+                                        </div>
+                                        <div class="col-md-4">
+                                            <input type="text" name="groupType" class="form-control form-control-sm" disabled="true"
+                                            placeholder="@{
+                                                if(classDetails.isDefined) {
+                                                    group.groupLevel.value.toLowerCase.capitalize.replace("level", "")
+                                                } else {
+                                                    "No Class Found"
+                                                }
+
+                                            }
+                                            ">
+                                        </div>
+                                        @*<div class="col-md-1">*@
+                                        @*<button type="button" class="close" aria-label="Close">*@
+                                        @*<span aria-hidden="true">&times;</span>*@
+                                        @*</button>*@
+                                        @*</div>*@
+                                    </div>
+                                }
+                            }
+                        }
+                    } else {
+                        <p>there</p>
+                        "No Class Found"
+                    }
+                    </div>
+                </div>
+
+
+            </div>
         </div>
     </div>
+
 
     @scalajs.html.scripts("client", routes.Assets.versioned(_).toString, name => getClass.getResource(s"/public/$name") != null)
 }
