--- a/server/app/views/planning/classtimetables/addNewClass.scala.html
+++ b/server/app/views/planning/classtimetables/addNewClass.scala.html
@@ -7,7 +7,23 @@
 
   <div class="add-new-class-form-section">
 
-   <h6 class="text-center text-muted form-header">New Class Details</h6>
+   <div class="d-flex">
+    <ul class="nav mr-auto justify-content-between">
+     <li class="nav-item manage-class-nav-item-leftmost">
+      <a class="btn btn-primary" role="button" href="@routes.Application.timeToTeachApp()">
+       Dashboard</a>
+     </li>
+
+     <li class="nav-item manage-class-nav-item-on-left">
+      <a class="btn btn-primary" role="button" href="@controllers.planning.classtimetable.routes.ClassTimetableController.classesHome()">
+       Classes</a>
+     </li>
+
+    </ul>
+   </div>
+
+
+   <h6 class="text-center text-muted form-header add-new-class-header">New Class Details</h6>
 
    <div>
     <div class="col-sm-4"></div>
